fix broken ui on responsiveness

--- a/src/components/UserDashboard/UserDashboard.css
+++ b/src/components/UserDashboard/UserDashboard.css
@@ -23,6 +23,10 @@
     padding: 0;
 }
 
+.item__name{
+    display: inline-block;
+}
+
 @media screen and (min-width: 1440px){
     .dashboard{
      margin: 0 auto;
@@ -34,9 +38,14 @@
     }
   }
 
+
   @media only screen and (max-width: 669px){
     .user-aside{
         width: 16.5%;
+    }
+
+    .item__name{
+        display: none;
     }
 }
   
