--- a/src/components/account/account.css
+++ b/src/components/account/account.css
@@ -2,6 +2,7 @@
 margin: 0;
 padding: 0;
 height: 100%;
+width: 100vw;
 }
 .account__content{
     margin: 0rem 25rem;
